Revert "[DnD] Listen to topology changes in DragDropController"
This reverts commit 7e365f7038085321a8733b166e7b28de7db9c314.

Reason for revert: Test constantly fails on abtd b/390289937

Change-Id: I8f6c811ffba37fb0848d7e252c91b2bcc8f36272